# python-translator

./: .gitignore  Modelfile.rw  Modelfile.sw  README.md  main.py  pyproject.toml  strings.xml  translations.xls  translations.xlsx  translations_filled.xlsx
app/: __init__.py  cloud_translator.py  database.py  excel.py  hf_translator.py  logging.py  ollama_translator.py  string_exporter.py  translation.py  translator.py
