[project]
name = "python-translator"
version = "1.0.0"
description = "LLM based translator"
authors = [
    {name = "secret-garden-coder",email = "secret-garden-coder@mail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
