[project]
name = "python-translator"
version = "1.0.0"
description = "LLM based translator"
authors = [
    { name = "Munywele Sammy Barasa", email = "sammy@munywele.co.ke" }
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "typer (>=0.24.0,<0.25.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
