[project]
name = "python-translator"
version = "1.0.0"
description = "LLM based translator"
authors = [
    { name = "Munywele Sammy Barasa", email = "sammy@munywele.co.ke" }
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "typer (>=0.24.0,<0.25.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "google-cloud-translate (>=3.24.0,<4.0.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "sacremoses (>=0.1.1,<0.2.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
